--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "videoflix_frontend",
   "version": "0.1.0",
+  "homepage": "https://niki21599.github.io/videoflix_frontend",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
